<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".UserProfile">

    <!-- Main content -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="#FFFFFF">

        <!-- Hamburger Menu Button -->
        <ImageButton
            android:id="@+id/hamburgerMenuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_hamburger_menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/hamburger_menu"/>

        <!-- Title -->
        <TextView
            android:id="@+id/profileTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/user_profile"
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- First Name Field -->
        <EditText
            android:id="@+id/firstNameEditText"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/poppins"
            android:hint="@string/first_name_hint"
            android:padding="14dp"
            android:textSize="16sp"
            android:enabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileTitle" />

        <!-- Last Name Field -->
        <EditText
            android:id="@+id/lastNameEditText"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/poppins"
            android:hint="@string/last_name_hint"
            android:padding="14dp"
            android:textSize="16sp"
            android:enabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstNameEditText" />

        <!-- Mobile Number Field -->
        <EditText
            android:id="@+id/mobileNumberEditText"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/poppins"
            android:hint="@string/mobile_number"
            android:padding="14dp"
            android:textSize="16sp"
            android:enabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastNameEditText" />

        <!-- Username Field -->
        <EditText
            android:id="@+id/userNameEditText"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/poppins"
            android:hint="@string/username_hint"
            android:padding="14dp"
            android:textSize="16sp"
            android:enabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mobileNumberEditText" />

        <!-- Edit Details Button -->
        <Button
            android:id="@+id/editDetailsButton"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#227442"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_edit"
            android:drawablePadding="15dp"
            android:focusable="true"
            android:fontFamily="@font/poppins"
            android:padding="14dp"
            android:text="@string/edit_details"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:cornerRadius="8dp"
            android:layout_marginTop="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userNameEditText"  />

        <!-- Save Button -->
        <Button
            android:id="@+id/saveDetailsButton"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#227442"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_save"
            android:drawablePadding="15dp"
            android:focusable="true"
            android:fontFamily="@font/poppins"
            android:padding="14dp"
            android:text="@string/save_details"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:visibility="gone"
            app:cornerRadius="8dp"
            android:layout_marginTop="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userNameEditText" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Sidebar (Drawer) -->
    <LinearLayout
        android:id="@+id/sidebar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:orientation="vertical"
        android:background="#227442"
        android:padding="16dp">

        <!-- User Account Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="24dp"
            android:clickable="true"
            android:focusable="true"
            android:padding="8dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/userIconImageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_user_icon"
                android:contentDescription="@string/user_icon"/>

            <TextView
                android:id="@+id/userAccountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/smart_mobilityx_user"
                android:fontFamily="@font/poppins_bold"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <!-- Home -->
        <TextView
            android:id="@+id/homeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selectvehicle"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#227442"
            android:fontFamily="@font/poppins"
            android:drawableLeft="@drawable/ic_vehicle"
            android:drawablePadding="15dp"
            android:padding="12dp"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:clickable="true"
            android:focusable="true" />

        <!-- Map Option -->
        <TextView
            android:id="@+id/mapButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#227442"
            android:fontFamily="@font/poppins"
            android:drawableLeft="@drawable/ic_map"
            android:drawablePadding="15dp"
            android:padding="12dp"
            android:text="@string/map"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:clickable="true"
            android:focusable="true" />

        <!-- Payment Option -->
        <TextView
            android:id="@+id/paymentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payment"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#227442"
            android:fontFamily="@font/poppins"
            android:drawableLeft="@drawable/ic_payment"
            android:drawablePadding="15dp"
            android:padding="12dp"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:clickable="true"
            android:focusable="true" />

        <!-- Ride History Option -->
        <TextView
            android:id="@+id/rideHistoryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ride_history"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#227442"
            android:fontFamily="@font/poppins"
            android:drawableLeft="@drawable/ic_ride_history"
            android:drawablePadding="15dp"
            android:padding="12dp"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:clickable="true"
            android:focusable="true" />

        <!-- Logout Button -->
        <TextView
            android:id="@+id/logoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_marginTop="150dp"
            android:background="@drawable/button_background"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_logout"
            android:drawablePadding="15dp"
            android:focusable="true"
            android:fontFamily="@font/poppins_semibold"
            android:padding="12dp"
            android:textColor="#227442"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>